# YI

./: LICENSE  README.md  pyproject.toml
src/yi/: __init__.py  main.py  models.py
src/yi/actions/: executor.py
src/yi/api/: __init__.py  router.py
src/yi/api/routes/: health.py
src/yi/config/: __init__.py  settings.py
src/yi/db/: __init__.py  sqlite.py
src/yi/decision/: __init__.py  policy.py
src/yi/goals/: __init__.py  manager.py
src/yi/iching/: __init__.py  guidance.py
src/yi/memory/: __init__.py  store.py
src/yi/observability/: __init__.py  logging.py  reflection.py
src/yi/runtime/: __init__.py  engine.py  lifecycle.py
src/yi/state/: __init__.py  store.py
src/yi/stimuli/: __init__.py  models.py
src/yi/tools/: __init__.py  logs.py  registry.py
tests/: test_domain_models.py  test_health.py
